# dellij

./: .env.example  .gitignore  Cargo.toml  GUIDE.md  README.md  build-mobile.sh  dellij  mise.toml  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
3c/1e304c1842/: metadata.json
3c/1e304c1842/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
3c/1e304c1842/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
6c/e12b87d83b/: metadata.json
6c/e12b87d83b/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
96/97c551e93e/: metadata.json
96/97c551e93e/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
convex/: schema.ts  status.ts  workspaces.ts
crates/dellij/: Cargo.toml
crates/dellij-core/: Cargo.toml
crates/dellij-core/src/: convex.rs  git.rs  layout.rs  lib.rs  types.rs
crates/dellij-gui/: Cargo.toml
crates/dellij-gui/src/: app.rs  browser.rs  colors.rs  diff_view.rs  main.rs  notifications.rs  sidebar.rs  watcher.rs
crates/dellij-mobile/: Cargo.toml
crates/dellij-mobile/src/: auth.rs  main.rs
crates/dellij/src/: main.rs
d3/cdf7e7d924/: metadata.json
d3/cdf7e7d924/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
fd/293f9c45a6/: metadata.json
fd/293f9c45a6/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
plugin/: Cargo.toml  build.sh
plugin/src/: lib.rs  main.rs
src/: DellijApp.tsx  index.ts  types.ts
src/components/: Sidebar.tsx  TabItem.tsx
src/components/popups/: AgentSelectPopup.tsx  PromptPopup.tsx
src/hooks/: useAgentStatus.ts  useInputHandling.ts  useTabs.ts
src/services/: HookManager.ts  ZellijService.ts
src/utils/: agentLaunch.ts  config.ts  doctor.ts  git.ts  zellij.ts
vhs/: demo.tape  hooks.tape  merge.tape
