[workspace]
members = ["crates/dellij", "crates/dellij-core", "crates/dellij-gui", "crates/dellij-mobile", "plugin"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Diogenesoftoronto/dellij"

[workspace.dependencies]
anyhow = "1.0"
camino = { version = "1.1", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
git2 = "0.19.0"
convex = "0.7.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
oauth2 = "4.4"
opener = "0.7"
tempfile = "3.10"
dellij-core = { path = "crates/dellij-core" }

[profile.release]
lto = true
opt-level = "s"
