[package]
name = "dellij-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and utilities for dellij"

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
git2.workspace = true
convex.workspace = true
tokio.workspace = true
futures.workspace = true
