[package]
name = "dellij-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop GUI for dellij — diff viewer, workspace sidebar, browser, notifications"

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dellij-core.workspace = true

# GPUI — Zed's GPU-accelerated UI framework
gpui = { git = "https://github.com/zed-industries/zed" }

# Cross-platform WebView for the browser pane
wry = "0.46"

# File-system change watching to react to status file updates
notify = { version = "6.1", features = ["serde"] }

# Git diff parsing
similar = "2.5"

[[bin]]
name = "dellij-gui"
path = "src/main.rs"
