[package]
name = "dellij-mobile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gpui-mobile = "0.1.0"
dellij-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
convex = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
oauth2 = { workspace = true }
opener = { workspace = true }
log = "0.4"
env_logger = "0.11"
