[package]
name = "dellij"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-first terminal workspace manager for Zellij, inspired by Superset and cmux."

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dellij-core.workspace = true

[dev-dependencies]
proptest = "1.5"
